# davis6410-rpi

./: .gitignore  Cargo.toml  Makefile  README.md  env.sh  recreate_db.sh
.github/workflows/: rust.yml
public/: index.html
src/: api.rs  davis.rs  db.rs  lib.rs
systemd/: install.sh  wind.service
