[package]
name = "rust-wind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite"] }
rppal = "0.17.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
